--- a/mealify/View/Base.lproj/Main.storyboard
+++ b/mealify/View/Base.lproj/Main.storyboard
@@ -619,7 +619,7 @@
                     <connections>
                         <segue destination="eEg-nl-cHd" kind="relationship" relationship="viewControllers" id="qf7-ga-cwZ"/>
                         <segue destination="PVr-ok-wBM" kind="relationship" relationship="viewControllers" id="YQE-V0-fKD"/>
-                        <segue destination="VKT-Jg-p5Z" kind="relationship" relationship="viewControllers" id="H1e-Zz-ahb"/>
+                        <segue destination="yDy-Hn-aqY" kind="relationship" relationship="viewControllers" id="MwS-9p-W6M"/>
                         <segue destination="c7D-ss-NEv" kind="relationship" relationship="viewControllers" id="xuY-Hy-JAJ"/>
                     </connections>
                 </tabBarController>
@@ -1110,24 +1110,58 @@
             </objects>
             <point key="canvasLocation" x="-726" y="-3007"/>
         </scene>
-        <!--ExploreMeal-->
-        <scene sceneID="mOX-yu-4m6">
+        <!--Explore Meals-->
+        <scene sceneID="MDy-EO-5AO">
             <objects>
-                <viewController id="VKT-Jg-p5Z" userLabel="ExploreMeal" customClass="ExploreMealViewController" customModule="mealify" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="yDy-Hn-aqY" customClass="ExploreMealViewController" customModule="mealify" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="reG-xs-S4M"/>
-                        <viewControllerLayoutGuide type="bottom" id="BhW-eb-inb"/>
+                        <viewControllerLayoutGuide type="top" id="PeY-It-eSw"/>
+                        <viewControllerLayoutGuide type="bottom" id="6ja-za-wQ7"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="h06-yf-SyX">
+                    <view key="view" contentMode="scaleToFill" id="wFj-bg-924">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Fhz-fe-xyE">
+                                <rect key="frame" x="16" y="170" width="343" height="284"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Recommended Meal:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HDI-TE-oAJ">
+                                <rect key="frame" x="16" y="462" width="343" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Gravity-Regular" family="Gravity" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Click Here to Find Recommended Meal" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qyJ-L5-xTq">
+                                <rect key="frame" x="16" y="505" width="343" height="93"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vl0-dM-YNO">
+                                <rect key="frame" x="16" y="505" width="343" height="105"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="loadRecommended:" destination="yDy-Hn-aqY" eventType="touchUpInside" id="tnV-Ex-99B"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Explore Meals" image="nav_recipe_grey@3x" selectedImage="nav_recipe_color" id="ptu-Rq-U5F"/>
+                    <tabBarItem key="tabBarItem" title="Explore Meals" selectedImage="nav_recipe_grey@3x" id="yEq-cV-M07"/>
+                    <connections>
+                        <outlet property="recMeal" destination="qyJ-L5-xTq" id="KIj-FT-8oe"/>
+                        <outlet property="userNutrients" destination="Fhz-fe-xyE" id="LSO-VS-7Gh"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="EBg-EJ-VWD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8e2-bC-7eB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1342" y="2742"/>
+            <point key="canvasLocation" x="536.79999999999995" y="2696.4017991004498"/>
         </scene>
         <!--Today-->
         <scene sceneID="gLE-uh-l4k">
@@ -2170,7 +2204,6 @@
         <image name="nav_community_grey" width="26" height="20"/>
         <image name="nav_me_color" width="25" height="23"/>
         <image name="nav_me_grey" width="25" height="23"/>
-        <image name="nav_recipe_color" width="25" height="25"/>
         <image name="nav_recipe_grey@3x" width="25" height="25"/>
         <image name="nav_user_color" width="25" height="25"/>
         <image name="nav_user_grey" width="25" height="25"/>
