--- a/mealify/View/Base.lproj/Main.storyboard
+++ b/mealify/View/Base.lproj/Main.storyboard
@@ -2170,7 +2170,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="hXs-nL-pFs"/>
-        <segue reference="LjZ-LN-p1e"/>
+        <segue reference="FY3-nk-p63"/>
         <segue reference="aun-NV-0SZ"/>
         <segue reference="5S2-hR-3uI"/>
     </inferredMetricsTieBreakers>
